Fix horizontal centering of cards on smallest breakpoint.

--- a/components/ProjectCard/ProjectCard.css
+++ b/components/ProjectCard/ProjectCard.css
@@ -9,10 +9,10 @@
     max-width: calc(50% - 1rem);
   }
   @media(max-width: $screen-xs){
+    display: flex;
     min-width: 310px;
     margin-left: auto;
     margin-right: auto;
-
   }
 }
 
